# verificatum-vcr

./: .macros.m4  .travis.yml  .version.m4  ChangeLog  LICENSE  Makefile.am  Makefile.build  README  README.md  README_DEV  README_DEV.md  configure.ac  test_classnames
src/java/com/verificatum/: VerificatumException.java  overview.html  package-info.java
src/java/com/verificatum/annotation/: CoberturaIgnore.java  package-info.java
src/java/com/verificatum/arithm/: ArithmError.java  ArithmException.java  ArithmFormatException.java  BPGroup.java  BPGroupElement.java  BPGroupElementArrayF.java  BPGroupElementArrayIM.java  BPGroupElementBatchReader.java  BPGroupElementBatchWriter.java  BPGroupElementIteratorF.java  BPGroupElementIteratorIM.java  BiExp.java  BiExpProd.java  BiPRingPGroup.java  ECqPGroup.magic  ECqPGroupElement.magic  ECqPGroupGen.java  ECqPGroupParams.java  HomPGroupPGroup.java  HomPGroupPGroupRest.java  HomPRingPGroup.java  HomPRingPGroupRest.java  LargeInteger.magic  LargeIntegerArray.java  LargeIntegerArrayF.java  LargeIntegerArrayIM.java  LargeIntegerBatchReader.java  LargeIntegerFixModPowTab.magic  LargeIntegerIterator.java  LargeIntegerIteratorF.java  LargeIntegerIteratorIM.java  LargeIntegerSimModPowTab.java  MathExt.java  MillerRabin.java  MillerRabinTrial.java  ModPGroup.java  ModPGroupElement.java  ModPGroupElementArray.java  ModPGroupElementIterator.java  ModPGroupGen.java  (+31 more)
src/java/com/verificatum/crypto/: CryptoError.java  CryptoException.java  CryptoFormatException.java  CryptoKeyGen.java  CryptoKeyGenNaorYung.java  CryptoKeyGenNaorYungGen.java  CryptoKeyPair.java  CryptoPKey.java  CryptoPKeyNaorYung.java  CryptoPKeyTrivial.java  CryptoSKey.java  CryptoSKeyNaorYung.java  Hashdigest.java  HashdigestHeuristic.java  HashdigestMerkleDamgaard.java  HashdigestRandomOracle.java  Hashfunction.java  HashfunctionBasic.java  HashfunctionFixedLength.java  HashfunctionHeuristic.java  HashfunctionHeuristicGen.java  HashfunctionMerkleDamgaard.java  HashfunctionMerkleDamgaardGen.java  HashfunctionPedersen.java  HashfunctionPedersenGen.java  PRG.java  PRGCombiner.java  PRGCombinerGen.java  PRGElGamal.java  PRGElGamalGen.java  PRGHeuristic.java  PRGHeuristicGen.java  RandomDevice.java  RandomDeviceGen.java  RandomOracle.java  RandomSource.java  RandomSourceCombiner.java  RandomSourceCombinerGen.java  SignatureKeyGen.java  SignatureKeyGenHeuristic.java  (+10 more)
src/java/com/verificatum/eio/: ByteTree.java  ByteTreeBasic.java  ByteTreeComparator.java  ByteTreeContainer.java  ByteTreeConvertible.java  ByteTreeF.java  ByteTreeQueue.java  ByteTreeQueueComparator.java  ByteTreeReader.java  ByteTreeReaderBT.java  ByteTreeReaderC.java  ByteTreeReaderF.java  ByteTreeTool.java  ByteTreeUtil.java  ByteTreeValidator.java  ByteTreeWriterF.java  EIOError.java  EIOException.java  ExtIO.java  Hex.java  IntContainer.java  Marshalizable.java  Marshalizer.java  TempFile.java  TestByteTree.java  package-info.java
src/java/com/verificatum/protocol/: Protocol.java  ProtocolBB.java  ProtocolBBGen.java  ProtocolBBT.java  ProtocolBBTGen.java  ProtocolDefaults.java  ProtocolError.java  ProtocolException.java  ProtocolFormatException.java  ProtocolGen.java  Shutdown.java  package-info.java
src/java/com/verificatum/protocol/com/: BullBoard.java  BullBoardBasic.java  BullBoardBasicGen.java  BullBoardBasicHTTP.java  BullBoardBasicHTTPGen.java  BullBoardBasicHTTPW.java  BullBoardBasicHTTPWGen.java  BullBoardBasicSingle.java  BullBoardBasicSingleGen.java  HintServer.java  SimpleHTTPClient.java  SimpleHTTPHandler.java  SimpleHTTPServer.java  SimpleHTTPServerTool.java  Sleeper.java  package-info.java
src/java/com/verificatum/test/: Test.java  TestClass.java  TestError.java  TestException.java  TestParameters.java  package-info.java
src/java/com/verificatum/tests/: package-info.java
src/java/com/verificatum/tests/arithm/: TestBiExp.java  TestBiExpProd.java  TestBiPRingPGroup.java  TestECqPGroup.java  TestECqPGroupElement.java  TestECqPGroupElementArray.java  TestECqPGroupElementIterator.java  TestECqPGroupGen.java  TestLargeInteger.java  TestLargeIntegerArray.java  TestModPGroup.java  TestModPGroupElement.java  TestModPGroupElementArray.java  TestModPGroupElementIterator.java  TestModPGroupGen.java  TestPField.java  TestPFieldElement.java  TestPFieldElementArray.java  TestPGroup.java  TestPGroupElement.java  TestPGroupElementArray.java  TestPGroupElementIterator.java  TestPHomPRingPGroup.java  TestPPGroup.java  TestPPGroupElement.java  TestPPGroupElementArray.java  TestPPGroupElementIterator.java  TestPPRing.java  TestPPRingElement.java  TestPPRingElementArray.java  TestPRing.java  TestPRingElement.java  TestPRingElementArray.java  TestPermutation.java  TestPolynomial.java  TestSafePrimeTable.java  package-info.java
src/java/com/verificatum/tests/crypto/: TestCryptoKeyGen.java  TestCryptoKeyGenNaorYung.java  TestCryptoKeyGenNaorYungGen.java  TestCryptoKeyPair.java  TestCryptoKeyPairNaorYung.java  TestCryptoPKey.java  TestCryptoPKeyNaorYung.java  TestCryptoPKeyTrivial.java  TestCryptoSKey.java  TestCryptoSKeyNaorYung.java  (+22 more)
src/java/com/verificatum/ui/: Console.java  Log.java  UI.java  UIError.java  Util.java  package-info.java
src/java/com/verificatum/util/: ArrayWorker.java  Command.java  Functions.java  Lazy.java  PID.java  PIDFile.java  Pair.java  SimpleJSON.java  SimpleJSONException.java  SimpleTimer.java  SplitWorker.java  TestSimpleJSON.java  Timer.java  Triple.java  UniformExecutor.java  UniformExecutors.java  UtilError.java  UtilException.java  package-info.java
src/java/com/verificatum/vcr/: VCR.java  package-info.java
src/m4/: ace_check_loadjar.m4  ace_module.m4  ace_prog_jar.m4  ace_prog_java.m4  ace_prog_javac.m4  ace_prog_javadoc.m4  ace_prog_javah.m4  preprocessing.m4
src/mf/: MANIFEST.MF.src
tools/installation/: TestLoadJar.java  complete_version
tools/staticanalysis/: generate_analysis.sh
tools/staticanalysis/checkstyle/: checkstyle_filter.sh  checkstyle_wrapper
tools/staticanalysis/findbugs/: findbugs_wrapper
tools/staticanalysis/pmd/: pmd_filter.sh  pmd_wrapper
(+37 files in other folders)
